# MoodCraft

./: README.md  package-lock.json
backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/results/: admin.py  models.py  serializers.py  urls.py  views.py
backend/results/migrations/: 0001_initial.py  0002_resultdetailmodel_image.py
backend/visiters/: models.py  urls.py
backend/visiters/migrations/: 0001_initial.py
css/: choice.css  result.css
develop/backend/: db.sqlite3
develop/backend/config/: settings.py
develop/backend/results/: urls.py
develop/backend/visiters/: serializers.py
develop/css/: choice.css  progress.css
develop/html/: choice.html  mainPage.html
develop/js/: resultKindModal.js
frontend/ryoona/css/: resultST.css  teamST.css
frontend/ryoona/html/: team.html  test.html
html/: choice.html  resultKind.html  resultProduct.html
js/: main.js
release/: choice.html  index.html  mainPage.html  progress.html  resultKind.html  resultProduct.html  resultST.css  style.css  team.html  teamST.css  test.html  testST.css
release/backend/: db.sqlite3  pyproject.toml
release/backend/config/: settings.py  urls.py
release/backend/results/: admin.py  models.py  serializers.py  urls.py  views.py
release/backend/results/migrations/: 0003_resultdetailmodel_image_url.py
release/backend/visiters/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
release/backend/visiters/migrations/: 0002_visiter_created_date.py
release/js/: Index.js  countVisiter.js  countVisiters.js  main.js  product.js  team.js  toss.js
(+7 files in other folders)
